--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "blockchain",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "../app/index.js",
   "scripts": {
     "test": "jest --watchAll",
     "dev-test": "cd tests && nodemon dev-test",
