--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "elliptic": "^6.4.1",
     "express": "^4.16.3",
