--- a/backend/package.json
+++ b/backend/package.json
@@ -20,11 +20,16 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
+    "dotenv": "^16.0.3",
     "elliptic": "^6.4.1",
-    "express": "^4.16.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.4",
     "uuid": "^3.3.2",
     "ws": "^6.0.0"
   }
