--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DB_URL = mongodb+srv://datacoin:suX99C0Xg4Qdn5nx@cluster0.comggev.mongodb.net/?retryWrites=true&w=majority
+DB_URL = mongodb+srv://datacoin:7DcGo2EKgJbVdSrV@cluster0.comggev.mongodb.net/?retryWrites=true&w=majority
