--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.4",
+    "node-rsa": "^1.1.1",
     "uuid": "^3.3.2",
     "ws": "^6.0.0"
   }
