--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "jest": "^23.5.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -28,10 +37,11 @@
     "dotenv": "^16.0.3",
     "elliptic": "^6.4.1",
     "express": "^4.18.2",
+    "fsevents": "^2.3.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.4",
     "node-rsa": "^1.1.1",
-    "uuid": "^3.3.2",
+    "uuid": "^3.4.0",
     "ws": "^6.0.0"
   }
 }
