--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^16.0.3",
