--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
+    "bootstrap": "^5.2.3",
     "mongoose": "^6.7.3",
     "node-rsa": "^1.1.1",
     "react": "^18.2.0",
